feat: support bucket filter on GET /assets
